namespace NotificationService.Domain.Constants;

public enum DeviceType
{
    ANDROID,
    IOS
}
